# gallery

gallery_app_react-main/: package-lock.json
gallery_app_react-main/src/: AdminArtworksPage.js  App.js  ArtworksPage.css  ArtworksPage.js  AuthModal.css  AuthModal.js  CartPage.css  CartPage.js  LoginPage.css  LoginPage.js  ThankYouModal.css  ThankYouModal.js  api.js
gallery_server_rust-main/: .env  Cargo.toml  README.md  test_api.sh
gallery_server_rust-main/src/: main.rs  mydb.db
gallery_server_rust-main/src/controllers/: artist_controller.rs  artwork_controller.rs  artwork_in_order_controller.rs  customer_controller.rs  init_db.rs  mod.rs  order_controller.rs
gallery_server_rust-main/src/models/: artist.rs  artwork.rs  artwork_in_order.rs  customer.rs  mod.rs  order.rs
gallery_server_rust-main/src/routes/: artists_routes.rs  artworks_in_order_routes.rs  artworks_routes.rs  customers_routes.rs  mod.rs  orders_routes.rs
